# TableWidget

./: CMakeLists.txt  README.md
include/: tabledelegate.h  tablemodel.h  tablewidget.h
src/: tabledelegate.cpp  tablemodel.cpp  tablewidget.cpp
ui/: tablewidget.ui
